# HappiE

./: .dockerignore  .env.example  .gitignore  DESIGN.md  PRODUCT.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build-push.yml
apps/admin-web/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/admin-web/app/: globals.css  layout.tsx
apps/admin-web/app/children/: page.tsx
apps/admin-web/app/children/[id]/: page.tsx
apps/admin-web/app/dashboard/: page.tsx
apps/admin-web/app/imports/: page.tsx
apps/admin-web/app/imports/youtube/: page.tsx
apps/admin-web/app/login/: page.tsx
apps/admin-web/app/settings/: page.tsx
apps/admin-web/app/videos/: page.tsx
apps/admin-web/app/videos/[id]/: page.tsx
apps/admin-web/app/videos/new/: page.tsx
apps/admin-web/components/: shell.tsx  ui.tsx
apps/admin-web/lib/: api.ts
apps/import-worker/: Dockerfile  package-lock.json  package.json  tsconfig.json
apps/import-worker/src/: index.ts
apps/ios-placeholder/: AGENTS.md  README.md
infra/docker/: README.md
infra/migrations/: 0001_init.sql  0002_remove_auth.sql
services/api/: Cargo.toml  Dockerfile
services/api/src/: main.rs
